kubernetes/apps/ploeg/ploeg/app/sandbox-launcher.ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sandbox-launcher-apiserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ploeg-sandbox-launcher
  egress:
    - toEntities:
        - kube-apiserver
